kind of fixed the schedule spacing

--- a/client/src/components/update-schedule.css
+++ b/client/src/components/update-schedule.css
@@ -4,7 +4,7 @@
   background-color: lightgrey;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   align-content: center;
   height: 100vh;
@@ -19,7 +19,6 @@
   color: black;
   font-weight: 900;
   font-size: 25px;
-  margin-bottom: 25px;
   text-align: center;
 }
 
@@ -36,7 +35,7 @@
   min-width: 36px;
   background-color: #fff;
   box-shadow: 4px 4px #323232;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
   color: black;
   border-radius: 5px;
@@ -51,38 +50,51 @@
   color: #fff;
 }
 
-.sessions {
+.Sessions {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 10px;
-  width: 100%;
-  gap: 20px;
+  padding: 15px;
+  width: 900px;
+  gap: 25px;
 }
 
 .session-container {
-  justify-content: space-between;
   display: flex;
-  flex-direction: row;
-  align-items: center; /* Add this line */
+  flex-direction: column;
   outline: 10;
   text-align: left;
   border: 2px solid #323232;
-  padding: 7px 16px;
+  padding: 15px;
   min-height: 36px;
   min-width: 36px;
   background: #fff;
   border-radius: 5px;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 18px;
   box-shadow: 4px 4px #323232;
 }
 
+.line1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 15px;
+
+}
+
+.line2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 15px;
+}
+
+
 .session-container label {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
   color: #323232;
-  padding: 10px;
+  padding: 15px;
 }
 
 .session-container input {
@@ -92,7 +104,7 @@
   border: 2px solid #323232;
   background-color: #fff;
   box-shadow: 4px 4px #323232;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
   color: #323232;
   padding: 10px;
@@ -110,7 +122,7 @@
   border: 2px solid #2d8cf0;
 }
 
-.session-container {
+/* .session-container {
   display: flex;
   flex-direction: row;
   outline: 10;
@@ -124,11 +136,11 @@
 .input-container {
   display: flex;
   align-items: center;
-  padding: 7px 16px;
+  padding: 0;
 }
 
 .input-container label {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
   color: #323232;
   padding-right: 10px;
@@ -141,7 +153,7 @@
   border: 2px solid #323232;
   background-color: #fff;
   box-shadow: 4px 4px #323232;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
   color: #323232;
   padding: 10px;
@@ -150,6 +162,6 @@
 }
 
 .delete {
-  align-self: flex-start; /* Adjust alignment of the button */
-  margin-top: 10px; /* Add some top margin for spacing */
-}
+  align-self: flex-start; /* Adjust alignment of the button 
+  margin-top: 10px;  Add some top margin for spacing 
+} */
